# Sahaf.AI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_retriever.py
chroma_db/bc19a8c4-5da8-4b1a-8420-5da147e0d3bb/: index_metadata.pickle
src/: chatbot.py
