[project]
name = "sahaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.2.1",
    "langchain-chroma==0.1.1",
    "langchain-community==0.2.1",
    "langchain-core==0.2.2",
    "langchain-huggingface==0.0.3",
    "langchain-text-splitters==0.2.0",
    "nest-asyncio==1.6.0",
    "pandas==2.2.2",
    "protobuf==4.25.3",
    "python-dotenv==1.0.1",
    "sentence-transformers==2.7.0",
    "streamlit==1.35.0",
    "tiktoken==0.7.0",
    "torch==2.3.1",
    "transformers==4.41.2",
]
